<resources>
    <string name="app_name">LastFM Info</string>
    <string name="top_tracks">Top tracks</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="artist_or_band">Artist or band</string>
    <string name="album">Album</string>
    <string name="top_artists_in_country">Top Artists in country</string>
    <string name="what_you_want">What you want?</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="choose_thing_which_you_want_search">Choose thing which you want search!</string>
    <string name="this_does_not_have_a_web_page_please_try_select_another">This does not have a web page! Please, try select another.</string>
    <string name="search_error">Search error! Please check your internet connection or validate of your query!</string>
    <string name="listeners">Listeners</string>
    <string name="playcount">Playcount</string>
</resources>

