<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zolotuhinartem.lastfminfo.FindActivity">

    <include
        android:id="@+id/tb_activity_find"
        layout="@layout/main_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tb_activity_find"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_activity_find"/>
        <TextView
            android:layout_below="@id/et_activity_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/what_you_want"
            android:id="@+id/tv_activity_find_what_you_want"/>
        <RadioGroup
            android:layout_below="@id/tv_activity_find_what_you_want"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_activity_find_artist_or_band"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_or_band" />

            <RadioButton
                android:id="@+id/rb_activity_find_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/ButtonStyle"
                android:id="@+id/btn_activity_find_cancel"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/find"
                style="@style/ButtonStyle"
                android:id="@+id/btn_activity_find_find"/>
        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
